--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,9 @@ html {
       font-size: 1.12em;
     }
   }
-
+  h2 {
+    margin: 0;
+  }
   div {
     &.green {
       background-color: $delGreen;
@@ -245,6 +247,7 @@ html {
           margin-bottom: 0.6em;
           line-height: 1.2;
           z-index: 99;
+          // margin: 0;
         }
         p {
           width: 80%;
@@ -391,6 +394,7 @@ html {
           p,
           ul {
             margin-bottom: 10px;
+            padding: 0;
             &:last-child {
               margin: 0;
             }
